// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Search Matches snapshot when boolean prop "hasSearch" is set to: "false" 1`] = `
<ForwardRef
  handlers={
    Object {
      "addItem": [Function],
      "close": [Function],
      "moveDown": [Function],
      "moveUp": [Function],
    }
  }
  hasSearch={false}
  keyMap={
    Object {
      "addItem": "enter",
      "close": "esc",
      "moveDown": "down",
      "moveUp": "up",
    }
  }
>
  <ForwardRef
    hasSearch={false}
    onChange={[Function]}
    placeholder="jest-auto-snapshots String Fixture"
    type="text"
    value=""
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Search Matches snapshot when boolean prop "shortcutsEnabled" is set to: "false" 1`] = `
<ForwardRef
  hasSearch={true}
  keyMap={
    Object {
      "addItem": "enter",
      "close": "esc",
      "moveDown": "down",
      "moveUp": "up",
    }
  }
>
  <ForwardRef
    hasSearch={true}
    onChange={[Function]}
    placeholder="jest-auto-snapshots String Fixture"
    type="text"
    value=""
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Search Matches snapshot when passed all props 1`] = `
<ForwardRef
  handlers={
    Object {
      "addItem": [Function],
      "close": [Function],
      "moveDown": [Function],
      "moveUp": [Function],
    }
  }
  hasSearch={true}
  keyMap={
    Object {
      "addItem": "enter",
      "close": "esc",
      "moveDown": "down",
      "moveUp": "up",
    }
  }
>
  <ForwardRef
    hasSearch={true}
    onChange={[Function]}
    placeholder="jest-auto-snapshots String Fixture"
    type="text"
    value=""
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Search Matches snapshot when passed only required props 1`] = `
<ForwardRef
  handlers={
    Object {
      "addItem": [Function],
      "close": [Function],
      "moveDown": [Function],
      "moveUp": [Function],
    }
  }
  hasSearch={false}
  keyMap={
    Object {
      "addItem": "enter",
      "close": "esc",
      "moveDown": "down",
      "moveUp": "up",
    }
  }
>
  <ForwardRef
    hasSearch={false}
    onChange={[Function]}
    placeholder="Search"
    type="text"
    value=""
  />
</ForwardRef>
`;
